# Pidex

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: security.yml
.sandcastle/: .env.example  .gitignore  CODING_STANDARDS.md  Dockerfile  SETUP_ISSUE_TRACKER.md  implement-prompt.md  issue-tracker.mjs  main.mts  merge-prompt.md  plan-prompt.md  review-prompt.md
.scratch/pidex-product-and-architecture/: CONTEXT.md  SPEC.md  map.md
apps/client/: index.html  vite.config.ts
apps/pwa/: accessible-session-status.d.mts  accessible-session-status.mjs  app.js  browser-compatibility.d.mts  browser-compatibility.mjs  index.html  manifest.webmanifest  read-state.d.mts  (+6 more)
docs/: architecture-decisions.md  authoritative-publishers.json  browser-capacity-evidence.md  development-lan-access.md  durability-publishers.json  fault-recovery-evidence.md  performance-evidence.md  release-promotion-evidence.md  security.md
native/windows/: CMakeLists.txt  candidate.json
native/windows/addon/: CMakeLists.txt
native/windows/addon/src/: addon.cpp  diagnostics.cpp  diagnostics.hpp  node_api_helpers.cpp  node_api_helpers.hpp  storage.cpp  storage.hpp
native/windows/common/: CMakeLists.txt
native/windows/common/include/pidex/windows/: dns_sd.hpp  error.hpp  identity.hpp  local_pipe.hpp  network.hpp  private_network.hpp  process.hpp  raii.hpp
native/windows/common/src/: dns_sd.cpp  error.cpp  identity.cpp  local_pipe.cpp  network.cpp  private_network.cpp  process.cpp
native/windows/launcher/: CMakeLists.txt
native/windows/launcher/src/: history.cpp  history.hpp  local_control.cpp  local_control.hpp  main.cpp  supervision.cpp  supervision.hpp
scripts/: check-development-prerequisites.mjs  secret-scan.mjs
test/: advisory-push.product.test.ts  authority-generation-recovery.product.test.ts  basic-interaction.product.test.ts  bridge-release.product.test.ts  browser-capacity-matrix.product.test.ts  cli-local-control.test.ts  client-scope-synchronization.product.test.ts  command-receipts.product.test.ts  contained-maintenance.test.ts  control-client.ts  cooperative-run-stop.product.test.ts  corruption-isolation.product.test.ts  desktop-session-experience.product.test.ts  deterministic-fault-campaign.product.test.ts  development-ca-guidance.product.test.ts  development-ca-reset.product.test.ts  development-ca.product.test.ts  development-certificate.product.test.ts  development-https.product.test.ts  development-pairing.product.test.ts  development-prerequisites.product.test.ts  device-cache-management.product.test.ts  device-pairing.product.test.ts  device-read-state-reconciliation.product.test.ts  device-revocation.product.test.ts  draft-service-worker.product.test.ts  durability-coverage.product.test.ts  durability-publication.product.test.ts  durability-publication.test.ts  durable-follow-up-runs.product.test.ts  durable-local-operations.test.ts  durable-store-maintenance.product.test.ts  elevated-windows-vm-evidence.test.ts  exact-integration-control.test.ts  exact-pi-child.test.ts  exact-run-steering.product.test.ts  first-completed-run.product.test.ts  forced-session-stop.product.test.ts  host-compatibility-record.test.ts  host-composition.test.ts  (+60 more)
(+110 files in other folders)
